--- a/zad/one.html
+++ b/zad/one.html
@@ -30,113 +30,222 @@
                     <li>120 Кбайт</li>
                     <li>480 байт</li>
                     <li>960 байт</li>
-                    <li>60 Кбайт</li>
+                    <li>60 Кбайт</li><p></p>
                 </ol>
+                    <a href="#openModal" class="vspliv">Разбор задания</a>
+                <div id="openModal" class="modalDialog">
                     <div>
-                        <a onclick="hidetxt('div1'); return false;" href="#" rel="nofollow">Разбор задания</a>
-                        <div style="display:none;" id="div1">
-                          И так, для начала посчитаем сколько всего символов в документе.
-                            <p></p>32 * 40 * 48 = 61440 байт (Мы не умножали на 8 чтобы потом не делить на это же число)
-                            <p></p>Дальше мы поделем это число на 1024
-                            <p></p>6144 байт \ 1024 = 60 Кбайт (Это и есть наш ответ)
-                            <p></p>Правильный ответ под номером 4
+                        <a href="#close" title="Закрыть" class="close">X</a>
+                        Найдем количество символов в статье:<p></p>
+                        32 · 40 · 48 = 25· 5 · 23· 3 · 24 = 15 · 212.<p></p>
+                        Один символ кодируется одним байтом, 210 байт составляют 1 килобайт, поэтому информационный объем статьи составляет
+                        15 · 212 байт = 15 · 22 килобайт = 60 Кб.<p></p>
+                        Правильный ответ указан под номером 4.
                         </div>
-                    </div>
+                    </div><p></p>
             </li>
             <li>Статья, набранная на компьютере, содержит 48 страниц, на каждой странице 40 строк, в каждой строке 64 символа. Определите размер статьи в кодировке КОИ-8, в которой каждый символ кодируется 8 битами.
                 <ol class="menu">
                     <li>120 Кбайт</li>
                     <li>240 Кбайт</li>
                     <li>1920 байт</li>
-                    <li>960 байт</li>
+                    <li>960 байт</li><p></p>
                 </ol>
-                    <a href="#openModal", class="vspliv">Разбор задания</a>
-                <div id="openModal" class="modalDialog">
+                    <a href="#openModal2" class="vspliv">Разбор задания</a>
+                <div id="openModal2" class="modalDialog">
                     <div>
                         <a href="#close" title="Закрыть" class="close">X</a>
-                    <p></p>Правильный ответ под номером 4
+                        Найдем количество символов в статье:<p></p>
+                        64·40·48 = 26·5·23·3·24 = 15·213.<p></p>
+                        Один символ кодируется одним байтом, 210 байт составляют 1 килобайт, поэтому информационный объем статьи составляет
+                        15·213 байт = 15·23 килобайт = 120 Кб.<p></p>
+                        Правильный ответ указан под номером 1.
                     </div>
-                </div>
+                </div><p></p>
             </li>
             <li>В одной из кодировок Unicode каждый символ кодируется 16 битами. Определите размер следующего предложения в данной кодировке: <b>Роняет лес багряный свой убор, сребрит мороз увянувшее поле.</b>
                 <ol class="menu">
                     <li>120 бит</li>
                     <li>960 бит</li>
                     <li>480 байт</li>
-                    <li>60 байт</li>
+                    <li>60 байт</li><p></p>
                 </ol>
+                <a href="#openModal3" class="vspliv">Разбор задания</a>
+                <div id="openModal3" class="modalDialog">
+                    <div>
+                        <a href="#close" title="Закрыть" class="close">X</a>
+                        Каждый символ кодируется 16 битами.<p></p>
+                        В предложении 60 символов, включая пробелы.<p></p> 
+                        Следовательно, оно кодируется 960 битами.<p></p>
+                        Правильный ответ указан под номером 2.
+                    </div>
+                </div><p></p>
             </li>
             <li>В одной из кодировок Unicode каждый символ кодируется 16 битами. Определите размер следующего предложения в данной кодировке: <b>Я вас любил: любовь ещё, быть может, в душе моей угасла не совсем.</b>
                 <ol class="menu">
                     <li>66 байт</li>
                     <li>1056 бит</li>
                     <li>528 байт</li>
-                    <li>132 бит</li>
+                    <li>132 бит</li><p></p>
                 </ol>
+                <a href="#openModal4" class="vspliv">Разбор задания</a>
+                <div id="openModal4" class="modalDialog">
+                    <div>
+                        <a href="#close" title="Закрыть" class="close">X</a>
+                        Каждый символ кодируется 16 битами или двумя байтами. Всего символов 66, включая пробелы. <p></p>
+                        Следовательно, ответ 1056 бит.<p></p>
+                        Правильный ответ указан под номером 2.
+                    </div>
+                </div><p></p>
             </li>
             <li>Статья, набранная на компьютере, содержит 16 страниц, на каждой странице 30 строк, в каждой строке 32 символа. Определите информационный объём статьи в одной из кодировок Unicode, в которой каждый символ кодируется 16 битами.
                 <ol class="menu">
                     <li>24 Кбайт</li>
                     <li>30 Кбайт</li>
                     <li>480 байт</li>
-                    <li>240 байт</li>
+                    <li>240 байт</li><p></p>
                 </ol>
+                <a href="#openModal3" class="vspliv">Разбор задания</a>
+                <div id="openModal3" class="modalDialog">
+                    <div>
+                        <a href="#close" title="Закрыть" class="close">X</a>
+                        Найдем количество символов в статье:<p></p>
+                        16·30·32 = 24·15·2·25 =15 · 210.<p></p>
+                        Один символ кодируется двумя байтами, 210 байт составляют 1 килобайт, поэтому ин¬форма-ционный объем статьи составляет
+                        15·2·210 байт = 30 Кб.<p></p>
+                        Правильный ответ указан под номером 2.
+                    </div>
+                </div><p></p>
             </li>
             <li>Реферат, набранный на компьютере, содержит 16 страниц, на каждой странице 50 строк, в каждой строке 64 символа. Для кодирования символов используется кодировка Unicode, при которой каждый символ кодируется 16 битами. Определите информационный объём реферата.
                 <ol class="menu">
                     <li>320 байта</li>
                     <li>100 Кбайт</li>
                     <li>128 Кбайт</li>
-                    <li>1 Мбайт</li>
+                    <li>1 Мбайт</li><p></p>
                 </ol>
+                <a href="#openModal5" class="vspliv">Разбор задания</a>
+                <div id="openModal5" class="modalDialog">
+                    <div>
+                        <a href="#close" title="Закрыть" class="close">X</a>
+                        Найдем количество символов в статье:<p></p>
+                        16·50·64 = 24·25·2·26 =25 · 211.<p></p>
+                        Один символ кодируется двумя байтами, 210 байт составляют 1 килобайт, поэтому информа-ционный объем статьи составляет
+                        25·2·211 байт = 100 Кб.<p></p>
+                        Правильный ответ указан под номером 2.
+                    </div>
+                </div><p></p>
             </li>
             <li>Статья, набранная на компьютере, содержит 8 страниц, на каждой странице 40 строк, в каждой строке 64 символа. Информационный объём статьи составляет 25 Кбайт. Определите, сколько бит памяти используется для кодирования каждого символа, если известно, что для представления каждого символа в ЭВМ отводится одинаковый объём памяти.
                 <ol class="menu">
                     <li>6</li>
                     <li>8</li>
                     <li>10</li>
-                    <li>12</li>
+                    <li>12</li><p></p>
                 </ol>
+                <a href="#openModal6" class="vspliv">Разбор задания</a>
+                <div id="openModal6" class="modalDialog">
+                    <div>
+                        <a href="#close" title="Закрыть" class="close">X</a>
+                        Найдем количество символов в статье:<p></p>
+                        8 · 40 · 64 = 212 · 5.<p></p>
+                        Информационный объём статьи составляет 25 Кбайт, 210 байт составляют 1 килобайт, по-этому на один символ приходится
+                        (25 · 210)/(5 · 212) байт = 5/4 байт = 10 бит.<p></p>
+                        Правильный ответ указан под ном
+                    </div>
+                </div><p></p>
             </li>
             <li>Статья, набранная на компьютере, содержит 64 страницы, на каждой странице 52 строки, в каждой строке 52 символа. Информационный объём статьи составляет 169 Кбайт. Определите, сколько бит памяти используется для кодирования каждого символа, если известно, что для представления каждого символа в ЭВМ отводится одинаковый объём памяти.
                 <ol class="menu">
                     <li>6</li>
                     <li>8</li>
                     <li>10</li>
-                    <li>12</li>
+                    <li>12</li><p></p>
                 </ol>
+                <a href="#openModal7" class="vspliv">Разбор задания</a>
+                <div id="openModal7" class="modalDialog">
+                    <div>
+                        <a href="#close" title="Закрыть" class="close">X</a>
+                        Найдем количество символов в статье:<p></p>
+                        64 · 52 · 52 = 210 · 169.<p></p>
+                        Информационный объём статьи составляет 169 Кбайт, 210 байт составляют 1 килобайт, по-этому на один символ приходится
+                        (169 · 210)/(169 · 210) байт = 1 байт = 8 бит.<p></p>
+                        Правильный ответ указан под номером 2<p></p>
+                    </div>
+                </div><p></p>
             </li>
             <li>Для получения годовой оценки по МХК ученику требовалось написать доклад на 8 страниц. Выполняя это задание на компьютере, он набирал текст в кодировке Unicode. Какой объём памяти (в Кбайтах) займет доклад, если в каждой строке по 32 символа, а на каждой странице помещается 64 строки? Каждый символ в кодировке Unicode занимает 16 бит памяти.
                 <ol class="menu">
                     <li>16</li>
                     <li>32</li>
                     <li>64</li>
-                    <li>256</li>
+                    <li>256</li><p></p>
                 </ol>
+                <a href="#openModal8" class="vspliv">Разбор задания</a>
+                <div id="openModal8" class="modalDialog">
+                    <div>
+                        <a href="#close" title="Закрыть" class="close">X</a>
+                        Найдем количество символов в докладе:<p></p>
+                        8 · 32 · 64 = 214.<p></p>
+                        Один символ кодируется двумя байтами, 210 байт составляют 1 килобайт, поэтому информационный объем статьи составляет
+                        215 байт = 32 Кб.<p></p>
+                        Правильный ответ указан под номером 2.
+                    </div>
+                </div><p></p>
             </li>
             <li>Для получения годовой оценки по истории ученику требовалось написать доклад на 16 страниц. Выполняя это задание на компьютере, он набирал текст в кодировке Windows. Какой объём памяти (в Кбайтах) займет доклад, если в каждой строке по 64 символа, а на каждой странице помещается 64 строки? Каждый символ в кодировке Windows занимает 8 бит памяти.
                 <ol class="menu">
                     <li>4</li>
                     <li>64</li>
                     <li>128</li>
-                    <li>256</li>
+                    <li>256</li><p></p>
                 </ol>
+                <a href="#openModal9" class="vspliv">Разбор задания</a>
+                <div id="openModal9" class="modalDialog">
+                    <div>
+                        <a href="#close" title="Закрыть" class="close">X</a>
+                        Найдем количество символов в докладе:<p></p>
+                        16 · 64 · 64 = 216.<p></p>
+                        Один символ кодируется одним байтом, 210 байт составляют 1 килобайт, поэтому информационный объем статьи составляет
+                        216 байт = 64 Кб.<p></p>
+                        Правильный ответ указан под номером 2.
+                    </div>
+                </div><p></p>
             </li>
             <li>Ученик набирает сочинение по литературе на компьютере, используя кодировку KOI-8. Определите какой объём памяти займёт следующая фраза:<h3>Пушкин — это наше всё!</h3>Каждый символ в кодировке KOI-8 занимает 8 бит памяти.
                 <ol class="menu">
                     <li>22 бит</li>
                     <li>88 байт</li>
                     <li>44 байт</li>
-                    <li>176 бит</li>
+                    <li>176 бит</li><p></p>
                 </ol>
+                <a href="#openModal10" class="vspliv">Разбор задания</a>
+                <div id="openModal10" class="modalDialog">
+                    <div>
+                        <a href="#close" title="Закрыть" class="close">X</a>
+                        Каждый символ кодируется 8 битами. Всего символов 22, включая пробелы.<p></p>
+                        Следовательно, ответ 176 бит.<p></p>
+                        Правильный ответ указан под номером 4
+                    </div>
+                </div><p></p>
             </li>
             <li>Ученик набирает сочинение по литературе на компьютере, используя кодировку KOI-8. Определите какой объём памяти займёт следующая фраза:<h3>Молекулы состоят из атомов!</h3>Каждый символ в кодировке KOI-8 занимает 8 бит памяти.
                 <ol class="menu">
                     <li>27 бит</li>
                     <li>108 бит</li>
                     <li>26 байт</li>
-                    <li>216 бит</li>
+                    <li>216 бит</li><p></p>
                 </ol>
+                <a href="#openModal11" class="vspliv">Разбор задания</a>
+                <div id="openModal11" class="modalDialog">
+                    <div>
+                        <a href="#close" title="Закрыть" class="close">X</a>
+                        Каждый символ кодируется 8 битами.<p></p>
+                        Всего символов 27, включая пробелы.<p></p> 
+                        Следовательно, ответ 216 бит.<p></p>
+                        Правильный ответ указан под номером 4.
+                    </div>
+                </div><p></p>
             </li>
         </ol>
     </body>
