--- a/probnick/probnick.html
+++ b/probnick/probnick.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>ОГЭ по информатики</title>
-        <link rel="stylesheet" href="css.css">
+        <link rel="stylesheet" href="probnick.css">
+        <script src="probnick.js"></script>
     </head>
     <body>
         <table>
@@ -25,9 +26,16 @@
         </ul>
         <div class="text">
             <div class="text2">
-                <h1>Здраствуйте</h1>
-                <h1>Надеюсь этот сайт поможет вам хорошо сдать ОГЭ по информатики. До новых встречь</h1>
-                <a href="vsmat.html", class="ss"><h1>Вспомагательный матереал</h1></a>
+                <li><p></p>В одной из кодировок Unicode каждый символ кодируется 16 битами. Определите размер следующего предложения в данной кодировке: <b>Как я любил твои отзывы, глухие звуки, бездны глас.</b><p></p>
+                <ol class="menu">
+                    <li>816 бит</li>
+                    <li>408 байт</li>
+                    <li>102 бит</li>
+                    <li>51 байт</li>
+                </ol><p></p>
+                <input id="one" type="text" class="input"><p></p>
+                <button type="button" onclick="check()">Отправить</button>
+            </li>
             </div>
         </div>
     </body>
