--- a/raz.html
+++ b/raz.html
@@ -30,7 +30,7 @@
             </td>
         </table>
          <ol class="text">
-            <li><h3>Количественные параметры информационных объектов<a href="zad/one.html", class="ss"> Посмотреть </a><a href="zad/vsmat.html", class="var">Вспомагательный матереал</a></h3></li>
+            <li><h3>Количественные параметры информационных объектов<a href="zad/one.html", class="ss"> Посмотреть </a></h3></li>
             <li><h3>Значение логического выражения<a href="zad/two.html", class="ss"> Посмотреть</a></h3></li>
             <li><h3>Формальные описания реальных объектов и процессов<a href="zad/three.html", class="ss"> Посмотреть</a></h3></li>
             <li><h3>Файловая система организации данных<a href="zad/four.html", class="ss"> Посмотреть</a></h3></li>
