--- a/var/var1_1.html
+++ b/var/var1_1.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>ОГЭ по информатики</title>
         <link rel="stylesheet" href="css.css">
+        <script src="var1.js"></script>
     </head>
     <body>
         <table>
@@ -27,7 +28,7 @@
             <table>
                 
             </table>
-            <h1>Оценка => <i>5</i></h1>
+            <h1>Оценка => <div id="yesotvet"></div></h1>
             <hr>
             <h1 class="text2">Пояснение</h1>
             <ol>
