--- a/vsmat.html
+++ b/vsmat.html
@@ -2,29 +2,31 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Вспомогательный материал</title>
+        <title>ОГЭ по информатики</title>
         <link rel="stylesheet" href="css.css">
     </head>
     <body>
         <table>
             <tr>
                 <div class="text">
-                    <h1 class="text2">Подготовка к ОГЭ по информатики</h1>
+                    <h1 class="zaglav">Подготовка к ОГЭ по информатики</h1>
                 </div>
             </tr>
         </table>
         <ul class="menu">
-            <a href="../index.html">
+            <a href="index.html">
                 <li class="menu__item"><h2>На главную</h2></li></a>
-            <a href="../raz.html">
+            <a href="raz.html">
                 <li class="menu__item"><h2>Разбор заданий</h2></li></a>
-            <a href="../test.html">
+            <a href="test.html">
                 <li class="menu__item"><h2>Тесты</h2></li></a>
-            <a href="../kontakt.html">
+            <a href="kontakt.html">
                 <li class="menu__item"><h2>Контакты</h2></li></a>
         </ul>
         <div class="text">
-            <h>Надо написать здесь вспомогательный материал к разделам с 1 по 20</h>
+            <div class="text2">
+                <h>Надо написать здесь вспомогательный материал к разделам с 1 по 20</h>
+            </div>
         </div>
     </body>
 </html>
