--- a/var/var1.html
+++ b/var/var1.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Вариант №1</title>
         <link rel="stylesheet" href="css.css">
+        <script src="var1.js"></script>
     </head>
     <body>
         <table>
@@ -31,7 +32,7 @@
                     <li>102 бит</li>
                     <li>51 байт</li>
                 </ol><p></p>
-                Ответ: <input type="text">
+                Ответ: <input id="one" type="text">
             </li>
             <hr>
             <li><p></p>Для какого из приведённых чисел истинно высказывание: <b>НЕ</b> (число < 20) <b>И</b> (число чётное)?<p></p>
@@ -41,7 +42,7 @@
                     <li>21</li>
                     <li>36</li>
                 </ol><p></p>
-                Ответ: <input type="text">
+                Ответ: <input id="tow" type="text">
             </li>
             <hr>
             <li><p></p>Между населёнными пунктами A, B, C, D, E построены дороги, протяжённость которых (в километрах) приведена в таблице.<p></p>
@@ -53,7 +54,7 @@
                     <li>10</li>
                     <li>12</li>
                 </ol><p></p>
-                Ответ: <input type="text">
+                Ответ: <input id="three" type="text">
             </li>
             <hr>
             <li><p></p>Дима хотел послушать музыку на компьютере, для этого ему нужно было включить музыкальный файл <b>Белые_розы.mp3</b>. Он начал работу с каталога <b>С:\Музыка\Хиты</b>. Сначала он спустился на один уровень вниз, в каталог <b>Ретро</b>, затем поднялся на один уровень вверх, потом спустился на один уровень в каталог <b>Лучшие</b> и нашёл там нужный музыкальный файл. Запишите полный путь к данному файлу.<p></p>
@@ -63,7 +64,7 @@
                     <li>С:\Белые_розы.mp3</li>
                     <li>С:\Музыка\Хиты\Ретро\Белые_розы.mp3</li>
                 </ol><p></p>
-                Ответ: <input type="text">
+                Ответ: <input id="four" type="text">
             </li>
             <hr>
             <li><p></p>Дан фрагмент электронной таблицы:<p></p>
@@ -75,7 +76,7 @@
                     <li>=B1-D1</li>
                     <li>=(C1-2*D1)/2</li>
                 </ol><p></p>
-                Ответ: <input type="text">
+                Ответ: <input id="five" type="text">
             </li>
             <hr>
             <li><p></p>Исполнитель Черепашка перемещается на экране компьютера, оставляя след в виде линии. В каждый конкретный момент известно положение исполнителя и направление его движения. У исполнителя существует две команды: <b>Вперёд n</b> (где n — целое число), вызывающая передвижение Черепашки на n шагов в направлении движения; <b>Направо m</b> (где m — целое число), вызывающая изменение направления движения на m градусов по часовой стрелке. Запись <b>Повтори k [Команда1 Команда2 КомандаЗ]</b> означает, что последовательность команд в скобках повторится k раз.<p></p>
@@ -86,7 +87,7 @@
                     <li>Повтори 6 [Вперёд 50 Направо 10 Направо 20]</li>
                     <li>Повтори 6 [Вперёд 50 Направо 20 Направо 40]</li>
                 </ol><p></p>
-                Ответ: <input type="text">
+                Ответ: <input id="six" type="text">
             </li>
             <hr>
             <li><p></p>Ваня и Коля переписываются при помощи придуманного шифра. Фрагмент кодовой таблицы приведён ниже.<p></p>
@@ -94,7 +95,7 @@
                 Расшифруйте сообщение, если известно, что в нём содержатся только буквы из предложенной таблицы. Разделителей между кодами букв нет:<p></p>
                 &&@&&&@@&@&&&@@&&<p></p>
                 Запишите в ответе расшифрованное сообщение.<p></p>
-                Ответ: <input type="text">
+                Ответ: <input id="seven" type="text">
             </li>
             <hr>
             <li><p></p>В алгоритме, записанном ниже, используются переменные a и b. Символ «:=» обозначает оператор присваивания, знаки «+», «-», «*» и «/» — соответственно операции сложения, вычитания, умножения и деления. Правила выполнения операций и порядок действий соответствуют правилам арифметики. Определите значение переменной b после выполнения алгоритма:<p></p>
@@ -103,22 +104,22 @@
             <b>a := 6 + a*b</b><p></p>
             <b>b := b + a/3</b><p></p> 
             В ответе укажите одно целое число — значение переменной b.<p></p>
-                Ответ: <input type="text">
+                Ответ: <input id="eight" type="text">
             </li>
             <hr>
             <li><p></p>Запишите значение переменной d, полученное в результате работы следующей программы. Текст программы приведён на трёх языках программирования.<p></p>
                 <img src="../img/var1/8.png"><p></p>
-                Ответ: <input type="text">
+                Ответ: <input id="nine" type="text">
             </li>
             <hr>
             <li><p></p>В таблице Dat хранятся данные о количестве учеников в классах (Dat[1] — количество учеников в первом классе, Dat[2] — во втором и т. д.). Определите, какое число будет напечатано в результате работы следующей программы. Текст программы приведён на трёх языках программирования.<p></p>
                 <img src="../img/var1/9.png"><p></p>
-                Ответ: <input type="text">
+                Ответ: <input id="ten" type="text">
             </li>
             <hr>
             <li><p></p>На рисунке — схема дорог, связывающих города А, Б, В, Г, Д, Е, К. По каждой дороге можно двигаться только в одном направлении, указанном стрелкой. Сколько существует различных путей из города А в город К?<p></p>
                 <img src="../img/var1/10.png"><p></p>
-                Ответ: <input type="text">
+                Ответ: <input id="eleven" type="text">
             </li>
             <hr>
             <li><p></p>Ниже в табличной форме представлен фрагмент базы данных «Отправление поездов дальнего следования»:<p></p>
@@ -126,46 +127,44 @@
                 Сколько записей в данном фрагменте удовлетворяют условию<p></p>
                 (Категория поезда = «скорый») <b>И</b> (Время в пути > 40:00)?<p></p>
                 В ответе укажите одно число — искомое количество записей.<p></p>
-               Ответ:  <input type="text">
+               Ответ:  <input id="twelve" type="text">
             </li>
             <hr>
             <li><p></p>Переведите число 132 из десятичной системы счисления в двоичную систему счисления. Сколько единиц содержит полученное число? В ответе укажите одно число — количество единиц.<p></p>
-                Ответ: <input type="text">
+                Ответ: <input id="thirteen" type="text">
             </li>
             <hr>
             <li><p></p>У исполнителя Квадратор две команды, которым присвоены номера:<p></p>
                 <b>1.	возведи в квадрат</b><p></p>
                 <b>2.	прибавь 2</b><p></p>
                 Первая из них возводит число на экране во вторую степень, вторая — прибавляет к числу 2. Составьте алгоритм получения из числа 1 числа 85, содержащий не более 5 команд. В ответе запишите только номера команд. В ответе запишите только номера команд. (Например, 21221 — это алгоритм: прибавь 2, возведи в квадрат, прибавь 2, прибавь 2, возведи в квадрат, который преобразует число 1 в 169.) Если таких алгоритмов более одного, то запишите любой из них.<p></p>
-                Ответ: <input type="text">
+                Ответ: <input id="fourteen" type="text">
             </li>
             <hr>
             <li><p></p>Файл размером 9 Мбайт передаётся через некоторое соединение за 240 секунд. Определите размер файла (в Мбайт), который можно передать через это же соединение за 80 секунд. В ответе укажите одно число — размер файла в Мбайт. Единицы измерения писать не нужно.<p></p>
-                Ответ: <input type="text">
+                Ответ: <input id="fifteen" type="text">
             </li>
             <hr>
             <li><p></p>Некоторый алгоритм из одной цепочки символов получает новую цепочку следующим образом. Сначала вычисляется длина исходной цепочки символов; если она нечётна, то удаляется последний символ цепочки, а если чётна, то в середину цепочки добавляется символ Б. В полученной цепочке символов каждая буква заменяется буквой, следующей за ней в русском алфавите (А — на Б, Б — на В и т. д., а Я — на А). Получившаяся таким образом цепочка является результатом работы алгоритма.<p></p>
             Например, если исходной была цепочка <b>РУКА</b>, то результатом работы алгоритма будет цепочка <b>СФВЛБ</b>, а если исходной была цепочка <b>СОН</b>, то результатом работы алгоритма будет цепочка <b>ТП</b>.<p></p>
             Дана цепочка символов <b>БРА</b>. Какая цепочка символов получится, если к данной цепочке применить описанный алгоритм дважды (т. е. применить алгоритм к данной цепочке, а затем к результату вновь применить алгоритм)? Русский алфавит: АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ.<p></p>
-                <input type="text">
+                <input id="sixteen" type="text">
             </li>
             <hr>
-            <li><p></p>Доступ к файлу tests.rar, находящемуся на сервере olympiada.ru, осуществляется по протоколу http. Фрагменты адреса файла закодированы буквами от А до Ж. Запишите последовательность этих букв, кодирующую адрес указанного файла в сети Интернет.
-                <ol class="menu">
-                    <li>tests</li>
-                    <li>http</li>
-                    <li>/</li>
-                    <li>.ru</li>
-                    <li>olympiada</li>
-                    <li>://</li>
-                    <li>.rar</li>
-                </ol><p></p>
-                Ответ: <input type="text">
+            <li><p></p>Доступ к файлу tests.rar, находящемуся на сервере olympiada.ru, осуществляется по протоколу http. Фрагменты адреса файла закодированы буквами от А до Ж. Запишите последовательность этих букв, кодирующую адрес указанного файла в сети Интернет.<p></p>
+                А)	test<p></p>
+                Б)	http<p></p>
+                В)	/<p></p>
+                Г)	.ru<p></p>
+                Д)	olympiada<p></p>
+                Е)	://<p></p>
+                Ж)  .rar<p></p>
+                Ответ: <input id="seventeen" type="text">
             </li>
             <hr>
             <li><p></p>В таблице приведены запросы к поисковому серверу. Для каждого запроса указан его код — соответствующая буква от А до Г. Расположите коды запросов слева направо в порядке возрастания количества страниц, которые нашёл поисковый сервер по каждому запросу. По всем запросам было найдено разное количество страниц. Для обозначения логической операции «ИЛИ» в запросе используется символ «|», а для логической операции «И» — «&»:<p></p>
                 <img src="../img/var1/17.png"><p></p>
-                Ответ: <input type="text">
+                Ответ: <input id="eighteen" type="text">
             </li>
             <hr>
             <li><p></p>В электронную таблицу занесли данные о тестировании учеников. Ниже приведены первые пять строк таблицы:<p></p>
@@ -174,8 +173,8 @@
                 <b>Выполните задание.</b><p></p>
                 Откройте файл с данной электронной таблицей (расположение файла Вам сообщат организаторы экзамена). На основании данных, содержащихся в этой таблице, ответьте на два вопроса.<p></p>
                 1.	Сколько учеников в Южном округе (Ю) выбрали в качестве любимого предмета английский язык? Ответ на этот вопрос запишите в ячейку Н2 таблицы.<p></p>
-                2.	Каков средний тестовый балл у учеников Юго-Восточного округа (ЮВ)? Ответ на этот вопрос запишите в ячейку Н3 таблицы с точностью не менее двух знаков после запятой.<p></p>
-                Скачать: <a href="../img/var1/get_file.xls", class="save" download>Фаил</a><p></p>
+                2.	Каков средний тестовый балл у учеников Юго-Восточного округа (ЮВ)?<p></p> Ответ на этот вопрос запишите в ячейку Н3 таблицы с точностью не менее двух знаков после запятой.<p></p>
+                Скачать: <a href="../img/var1/get_file.xls" class="save" download>Фаил</a><p></p>
                 <input type="file">
             </li>
             <hr>
@@ -217,6 +216,6 @@
                 <input type="file"><p></p>
             </li>
         </ol>
-        <a href="var1_1.html"><div class="otpr"><b>Отправить ответ</b></div></a>
+        <a href="var1_1.html"><div onclick="check()" class="otpr"><h1><b>Отправить ответ</b></h1></div></a>
     </body>
 </html>
