--- a/probnick/probnick.html
+++ b/probnick/probnick.html
@@ -7,137 +7,6 @@
         <script src="probnick.js"></script>
     </head>
     <body>
-        <table>
-            <tr>
-                <div class="text">
-                    <h1 class="zaglav">Подготовка к ОГЭ по информатики</h1>
-                </div>
-            </tr>
-        </table>
-        <ul class="menu">
-            <a href="index.html">
-                <li class="menu__item"><h2>На главную</h2></li></a>
-            <a href="raz.html">
-                <li class="menu__item"><h2>Разбор заданий</h2></li></a>
-            <a href="test.html">
-                <li class="menu__item"><h2>Тесты</h2></li></a>
-            <a href="kontakt.html">
-                <li class="menu__item"><h2>Контакты</h2></li></a>
-        </ul>
-        <div class="text2">
-            <table>
-                <!--<tr></tr> строка-->
-                <!--<td></td> столбец-->
-                <!--1. столбец название задания-->
-                <!--2. столбец правильный ответ-->
-                <!--3. столбец ваш ответ-->
-                <tr>
-                    <td><h3 class="zaglav">название задания</h3></td>
-                    <td width="150" class="zaglav"><h3>правильный ответ</h3></td>
-                    <td width="150" class="zaglav"><h3>ваш ответ</h3></td>
-                </tr>
-                <tr>
-                    <td><h3>1. Количественные параметры информационных объектов</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>2. Значение логического выражения</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>3. Формальные описания реальных объектов и процессов</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>4. Файловая система организации данных</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>5. Формульная зависимость в графическом виде</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>6. Алгоритм для конкретного исполнителя с фиксированным набором команд</h3>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td></td>
-                </tr>
-                <tr>
-                    <td><h3>7. Кодирование и декодирование информации</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>8. Линейный алгоритм, записанный на алгоритмическом языке</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>9. Простейший циклический алгоритм, записанный на алгоритмическом языке</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>10. Циклический алгоритм обработки массива чисел, записанный на алгоритмическом языке</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>11. Анализирование информации, представленной в виде схем</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>12. Осуществление поиска в готовой базе данных по сформулированному условию</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>13. Дискретная форма представления числовой, текстовой, графической и звуковой информации</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>14. Простой линейный алгоритм для формального исполнителя</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>15. Скорость передачи информации</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>16. Алгоритм, записанный на естественном языке, обрабатывающий цепочки символов или списки</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>17. Информационно-коммуникационные технологии</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>18. Осуществление поиска информации в Интернете</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>19. Обработка большого массива данных с использованием средств электронной таблицы или базы данных</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-                <tr>
-                    <td><h3>20. Короткий алгоритм в среде формального исполнителя или на языке программирования</h3></td>
-                    <td class="zaglav"></td>
-                    <td class="zaglav"></td>
-                </tr>
-            </table>
-    <div class="save"><h1>Оценка => <div id="yesotvet"></div></h1></div>
-        </div>
+        <div id="tow"></div>
     </body>
 </html>
